WebHelpers ChangeLog
====================

tip (development version)
-------------------------

* webhelpers.containers / webhelpers.misc:

  - ``NotGiven`` moved to webhelpers.misc.

* webhelpers.html.grid / webhelpers.pylonslib.grid:

  - Updates by Ergo, including SQLAlchemy grid classes, and styling.

* webhelpers.misc:

  - New function ``deprecate``.

* webhelpers.paginate:

 - New URL generation algorithm for ``Page.pager()``. You can pass a callback
   function to the constructor, or it will fall back to ``pylons.url.current``
   or ``routes.url_for`` (in that order). It will raise ``NotImplementedError`` if
   none of these are available.
 - Don't allow extra positional args in constructor. The implementation does
   nothing with them, so it shouldn't allow them.

* webhelpers.pylonslib.flash:

  - New argument ``ignore_duplicate`` to prevent adding the same message
    multiple times.

* webhelpers.number:

  - New functions ``format_data_size``, ``format_byte_size``, and
    ``format_bit_size`` for displaying numbers in SI units
    ("1.2 kilobytes", "1.2 kB", "1.0 KiB"). Contributed by
    Wojciech Malinowski.

1.0b5 (2010-03-18)
------------------

* webhelpers.html.converters:

  - Re-add import of ``render`` and ``sanitize`` from
    ``webhelpers.html.render``.  That module is not public.

* webhelpers.misc:

  - New exception ``OverwriteError``.
  - Add ``exclude`` argument to ``subclasses_only``.

* webhelpers.text:

  - Disable ``convert_misc_characters``: it fails its doctests and there's
    no consensus on what it should do.

* "number_to_human_size.py" is in unfinished directory. This is an old rails
  helper from WebHelpers 0.6.4. It's here pending a more comprehensive helper;
  see http://bitbucket.org/bbangert/webhelpers/issue/2/reinstate-number_to_human_size

1.0b4 (2010-01-24)
------------------

* Delete ``webhelpers.string24``.  WebHelpers no longer supports Python 2.3.

* webhelpers.feedgenerator:
